--- a/style.css
+++ b/style.css
@@ -1,4 +1,5 @@
--sizing: border-box;
+* {
+  box-sizing: border-box;
 }
 
 body {
@@ -13,10 +14,6 @@ button:hover {
   cursor: pointer;
 }
 
-.hidden {
-  display: none;
-}
-
 #shopping-list-item {
   width: 250px;
 }
@@ -29,7 +26,19 @@ button:hover {
 .shopping-list {
   list-style: none;
   padding-left: 0;
-} rey; 
+}
+
+.shopping-list > li {
+  margin-bottom: 20px;
+  border: 1px solid grey;
+  padding: 20px;
+}
+
+.shopping-item {
+  display: block;
+  color: grey;
+  font-style: italic;
+  font-size: 20px;
   margin-bottom: 15px;
 }
 
